@@ -1,6 +1,7 @@
 # This testcase is part of GDB, the GNU debugger.
 
-# Copyright 1992-2013 Free Software Foundation, Inc.
+# Copyright 1992, 1994, 1995, 1996, 1997, 1999, 2000, 2002, 2003, 2004, 2007,
+# 2008, 2009, 2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -20,6 +21,11 @@
 
 # This file was written by Fred Fish. (fnf@cygnus.com)
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
+
 set testfile "printcmds"
 set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
@@ -28,7 +34,23 @@ if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {deb
      return -1
 }
 
-get_compiler_info
+get_compiler_info ${binfile}
+
+# Set the current language to C.  This counts as a test.  If it
+# fails, then we skip the other tests.
+
+proc set_lang_c {} {
+    global gdb_prompt
+
+    if [gdb_test_no_output "set language c" "set language c"] {
+	return 0
+    }
+
+    if [gdb_test "show language" ".* source language is \"c\".*"] {
+	return 0
+    }
+    return 1;
+}
 
 proc test_integer_literals_accepted {} {
     global gdb_prompt
@@ -97,6 +119,17 @@ proc test_integer_literals_rejected {} {
 
     test_print_reject "p DEADBEEF"
 
+    # Gdb currently fails this test for all configurations.  The C
+    # lexer thinks that 123DEADBEEF is a floating point number, but
+    # then fails to notice that atof() only eats the 123 part.
+    # FIXME:  This should be put into PRMS.
+    # Fixed, 4/25/97, by Bob Manson.
+
+    test_print_reject "p 123DEADBEEF"
+    test_print_reject "p 123foobar.bazfoo3"
+    test_print_reject "p 123EEEEEEEEEEEEEEEEE33333k333"
+    gdb_test "p 123.4+56.7" "180.(099\[0-9]*|100\[0-9\]*)" "check for floating addition"
+
     # Test various octal values.
 
     test_print_reject "p 09" 
@@ -111,49 +144,6 @@ proc test_integer_literals_rejected {} {
 
     test_print_reject "p 0b2" 
     test_print_reject "p 0b12" 
-}
-
-proc test_float_accepted {} {
-    global gdb_prompt
-
-    # This test is useful to catch successful parsing of the first fp value.
-    gdb_test "p 123.4+56.7" " = 180.(099\[0-9]*|100\[0-9\]*)" "check for floating addition"
-
-    # Test all the suffixes (including no suffix).
-    gdb_test "p 1." " = 1"
-    gdb_test "p 1.5" " = 1.5"
-    gdb_test "p 1.f" " = 1"
-    gdb_test "p 1.5f" " = 1.5"
-    gdb_test "p 1.l" " = 1"
-    gdb_test "p 1.5l" " = 1.5"
-
-    # Test hexadecimal floating point.
-    set test "p 0x1.1"
-    gdb_test_multiple $test $test {
-	-re " = 1\\.0625\r\n$gdb_prompt $" {
-	    pass $test
-	}
-	-re "Invalid number \"0x1\\.1\"\\.\r\n$gdb_prompt $" {
-	    # Older glibc does not support hex float, newer does.
-	    xfail $test
-	}
-    }
-}
-
-proc test_float_rejected {} {
-    # Gdb use to fail this test for all configurations.  The C
-    # lexer thought that 123DEADBEEF was a floating point number, but
-    # then failed to notice that atof() only eats the 123 part.
-    # Fixed, 4/25/97, by Bob Manson.
-    test_print_reject "p 123DEADBEEF"
-
-    test_print_reject "p 123foobar.bazfoo3"
-    test_print_reject "p 123EEEEEEEEEEEEEEEEE33333k333"
-
-    # Test bad suffixes.
-    test_print_reject "p 1.1x"
-    test_print_reject "p 1.1ff"
-    test_print_reject "p 1.1ll"
 }
 
 proc test_print_all_chars {} {
@@ -421,11 +411,11 @@ proc test_print_all_chars {} {
 # repeat count, set to the default of 10.
 
 proc test_print_repeats_10 {} {
-    global gdb_prompt decimal
+    global gdb_prompt
 
-    for { set x 1 } { $x <= 16 } { incr x } {
+    for { set x 1; } { $x <= 16 } { incr x; } {
 	gdb_test_no_output "set print elements $x"
-	for { set e 1 } { $e <= 16 } {incr e } {
+	for { set e 1; } { $e <= 16 } {incr e; } {
 	    set v [expr $e - 1];
 	    set command "p &ctable2\[${v}*16\]"
 	    if { $x < $e } {
@@ -463,26 +453,14 @@ proc test_print_repeats_10 {} {
 	    if { $aval < 16 } {
 		set xstr "${xstr}\[.\]\[.\]\[.\]"
 	    }
-	    set string " = \[(\]unsigned char \[*\]\[)\] <ctable2(\\+$decimal)?> ${a}${xstr}";
+	    set string " = \[(\]unsigned char \[*\]\[)\] ${a}${xstr}";
 	    gdb_test "$command" "$string" "$command with print elements set to $x";
 	}
     }
 }
 
-# This tests whether GDB uses the correct element content offsets
-# (relative to the complete `some_struct' value) when counting value
-# repetitions.
-
-proc test_print_repeats_embedded_array {} {
-    global gdb_prompt
-
-    gdb_test_escape_braces "p/x some_struct" \
-	"= {a = 0x12345678, b = 0x87654321, array = {0xaa <repeats 20 times>}}" \
-	"correct element repeats in array embedded at offset > 0"
-}
-
 proc test_print_strings {} {
-    global gdb_prompt decimal
+    global gdb_prompt
 
     # We accept "(unsigned char *) " before the string.  char vs. unsigned char
     # is already tested elsewhere.
@@ -508,71 +486,71 @@ proc test_print_strings {} {
     gdb_test_no_output "set print elements 8"
 
     gdb_test "p &ctable1\[0\]" \
-	" = \\(unsigned char \\*\\) <ctable1> \"\""
+	" = \\(unsigned char \\*\\) \"\""
     gdb_test "p &ctable1\[1\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\001\\\\002\\\\003\\\\004\\\\005\\\\006\\\\a\\\\b\"..."
+	" = \\(unsigned char \\*\\) \"\\\\001\\\\002\\\\003\\\\004\\\\005\\\\006\\\\a\\\\b\"..."
     gdb_test "p &ctable1\[1*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\b\\\\t\\\\n\\\\v\\\\f\\\\r\\\\016\\\\017\"..."
+	" = \\(unsigned char \\*\\) \"\\\\b\\\\t\\\\n\\\\v\\\\f\\\\r\\\\016\\\\017\"..."
     gdb_test "p &ctable1\[2*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\020\\\\021\\\\022\\\\023\\\\024\\\\025\\\\026\\\\027\"..."
+	" = \\(unsigned char \\*\\) \"\\\\020\\\\021\\\\022\\\\023\\\\024\\\\025\\\\026\\\\027\"..."
     gdb_test "p &ctable1\[3*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\030\\\\031\\\\032\\\\033\\\\034\\\\035\\\\036\\\\037\"..."
+	" = \\(unsigned char \\*\\) \"\\\\030\\\\031\\\\032\\\\033\\\\034\\\\035\\\\036\\\\037\"..."
     gdb_test "p &ctable1\[4*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \" !\\\\\"#\\\$%&'\"..."
+	" = \\(unsigned char \\*\\) \" !\\\\\"#\\\$%&'\"..."
     gdb_test "p &ctable1\[5*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\(\\)\\*\\+,-./\"..."
+	" = \\(unsigned char \\*\\) \"\\(\\)\\*\\+,-./\"..."
     gdb_test "p &ctable1\[6*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"01234567\"..."
+	" = \\(unsigned char \\*\\) \"01234567\"..."
     gdb_test "p &ctable1\[7*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"89:;<=>\\?\"..."
+	" = \\(unsigned char \\*\\) \"89:;<=>\\?\"..."
     gdb_test "p &ctable1\[8*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"@ABCDEFG\"..."
+	" = \\(unsigned char \\*\\) \"@ABCDEFG\"..."
     gdb_test "p &ctable1\[9*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"HIJKLMNO\"..."
+	" = \\(unsigned char \\*\\) \"HIJKLMNO\"..."
     gdb_test "p &ctable1\[10*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"PQRSTUVW\"..."
+	" = \\(unsigned char \\*\\) \"PQRSTUVW\"..."
     gdb_test "p &ctable1\[11*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"XYZ\\\[\\\\\\\\\\\]\\^_\"..."
+	" = \\(unsigned char \\*\\) \"XYZ\\\[\\\\\\\\\\\]\\^_\"..."
     gdb_test "p &ctable1\[12*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"`abcdefg\"..."
+	" = \\(unsigned char \\*\\) \"`abcdefg\"..."
     gdb_test "p &ctable1\[13*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"hijklmno\"..."
+	" = \\(unsigned char \\*\\) \"hijklmno\"..."
     gdb_test "p &ctable1\[14*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"pqrstuvw\"..."
+	" = \\(unsigned char \\*\\) \"pqrstuvw\"..."
     gdb_test "p &ctable1\[15*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"xyz\[{|}\]+\\~\\\\177\"..."
+	" = \\(unsigned char \\*\\) \"xyz\[{|}\]+\\~\\\\177\"..."
     gdb_test "p &ctable1\[16*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\200\\\\201\\\\202\\\\203\\\\204\\\\205\\\\206\\\\207\"..."
+	" = \\(unsigned char \\*\\) \"\\\\200\\\\201\\\\202\\\\203\\\\204\\\\205\\\\206\\\\207\"..."
     gdb_test "p &ctable1\[17*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\210\\\\211\\\\212\\\\213\\\\214\\\\215\\\\216\\\\217\"..."
+	" = \\(unsigned char \\*\\) \"\\\\210\\\\211\\\\212\\\\213\\\\214\\\\215\\\\216\\\\217\"..."
     gdb_test "p &ctable1\[18*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\220\\\\221\\\\222\\\\223\\\\224\\\\225\\\\226\\\\227\"..."
+	" = \\(unsigned char \\*\\) \"\\\\220\\\\221\\\\222\\\\223\\\\224\\\\225\\\\226\\\\227\"..."
     gdb_test "p &ctable1\[19*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\230\\\\231\\\\232\\\\233\\\\234\\\\235\\\\236\\\\237\"..."
+	" = \\(unsigned char \\*\\) \"\\\\230\\\\231\\\\232\\\\233\\\\234\\\\235\\\\236\\\\237\"..."
     gdb_test "p &ctable1\[20*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\240\\\\241\\\\242\\\\243\\\\244\\\\245\\\\246\\\\247\"..."
+	" = \\(unsigned char \\*\\) \"\\\\240\\\\241\\\\242\\\\243\\\\244\\\\245\\\\246\\\\247\"..."
     gdb_test "p &ctable1\[21*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\250\\\\251\\\\252\\\\253\\\\254\\\\255\\\\256\\\\257\"..."
+	" = \\(unsigned char \\*\\) \"\\\\250\\\\251\\\\252\\\\253\\\\254\\\\255\\\\256\\\\257\"..."
     gdb_test "p &ctable1\[22*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\260\\\\261\\\\262\\\\263\\\\264\\\\265\\\\266\\\\267\"..."
+	" = \\(unsigned char \\*\\) \"\\\\260\\\\261\\\\262\\\\263\\\\264\\\\265\\\\266\\\\267\"..."
     gdb_test "p &ctable1\[23*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\270\\\\271\\\\272\\\\273\\\\274\\\\275\\\\276\\\\277\"..."
+	" = \\(unsigned char \\*\\) \"\\\\270\\\\271\\\\272\\\\273\\\\274\\\\275\\\\276\\\\277\"..."
     gdb_test "p &ctable1\[24*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\300\\\\301\\\\302\\\\303\\\\304\\\\305\\\\306\\\\307\"..."
+	" = \\(unsigned char \\*\\) \"\\\\300\\\\301\\\\302\\\\303\\\\304\\\\305\\\\306\\\\307\"..."
     gdb_test "p &ctable1\[25*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\310\\\\311\\\\312\\\\313\\\\314\\\\315\\\\316\\\\317\"..."
+	" = \\(unsigned char \\*\\) \"\\\\310\\\\311\\\\312\\\\313\\\\314\\\\315\\\\316\\\\317\"..."
     gdb_test "p &ctable1\[26*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\320\\\\321\\\\322\\\\323\\\\324\\\\325\\\\326\\\\327\"..."
+	" = \\(unsigned char \\*\\) \"\\\\320\\\\321\\\\322\\\\323\\\\324\\\\325\\\\326\\\\327\"..."
     gdb_test "p &ctable1\[27*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\330\\\\331\\\\332\\\\333\\\\334\\\\335\\\\336\\\\337\"..."
+	" = \\(unsigned char \\*\\) \"\\\\330\\\\331\\\\332\\\\333\\\\334\\\\335\\\\336\\\\337\"..."
     gdb_test "p &ctable1\[28*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\340\\\\341\\\\342\\\\343\\\\344\\\\345\\\\346\\\\347\"..."
+	" = \\(unsigned char \\*\\) \"\\\\340\\\\341\\\\342\\\\343\\\\344\\\\345\\\\346\\\\347\"..."
     gdb_test "p &ctable1\[29*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\350\\\\351\\\\352\\\\353\\\\354\\\\355\\\\356\\\\357\"..."
+	" = \\(unsigned char \\*\\) \"\\\\350\\\\351\\\\352\\\\353\\\\354\\\\355\\\\356\\\\357\"..."
     gdb_test "p &ctable1\[30*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\360\\\\361\\\\362\\\\363\\\\364\\\\365\\\\366\\\\367\"..."
+	" = \\(unsigned char \\*\\) \"\\\\360\\\\361\\\\362\\\\363\\\\364\\\\365\\\\366\\\\367\"..."
     gdb_test "p &ctable1\[31*8\]" \
-	" = \\(unsigned char \\*\\) <ctable1\\+$decimal> \"\\\\370\\\\371\\\\372\\\\373\\\\374\\\\375\\\\376\\\\377\"..."
+	" = \\(unsigned char \\*\\) \"\\\\370\\\\371\\\\372\\\\373\\\\374\\\\375\\\\376\\\\377\"..."
 }
 
 proc test_print_int_arrays {} {
@@ -623,7 +601,7 @@ proc test_artificial_arrays {} {
 
 proc test_print_char_arrays {} {
     global gdb_prompt
-    global hex decimal
+    global hex
 
     gdb_test_no_output "set print elements 24"
     gdb_test_no_output "set print address on"
@@ -631,17 +609,17 @@ proc test_print_char_arrays {} {
     gdb_test "p arrays" \
 	" = {array1 = \"abc\", array2 = \"d\", array3 = \"e\", array4 = \"fg\", array5 = \"hij\"}"
 
-    gdb_test "p parrays"		" = \\(struct some_arrays \\*\\) $hex <arrays>"
+    gdb_test "p parrays"		" = \\(struct some_arrays \\*\\) $hex"
     gdb_test "p parrays->array1"	" = \"abc\""
-    gdb_test "p &parrays->array1"	" = \\(unsigned char \\(\\*\\)\\\[4\\\]\\) $hex <arrays>"
+    gdb_test "p &parrays->array1"	" = \\(unsigned char \\(\\*\\)\\\[4\\\]\\) $hex"
     gdb_test "p parrays->array2"	" = \"d\""
-    gdb_test "p &parrays->array2"	" = \\(unsigned char \\(\\*\\)\\\[1\\\]\\) $hex <arrays\\+$decimal>"
+    gdb_test "p &parrays->array2"	" = \\(unsigned char \\(\\*\\)\\\[1\\\]\\) $hex"
     gdb_test "p parrays->array3"	" = \"e\""
-    gdb_test "p &parrays->array3"	" = \\(unsigned char \\(\\*\\)\\\[1\\\]\\) $hex <arrays\\+$decimal>"
+    gdb_test "p &parrays->array3"	" = \\(unsigned char \\(\\*\\)\\\[1\\\]\\) $hex"
     gdb_test "p parrays->array4"	" = \"fg\""
-    gdb_test "p &parrays->array4"	" = \\(unsigned char \\(\\*\\)\\\[2\\\]\\) $hex <arrays\\+$decimal>"
+    gdb_test "p &parrays->array4"	" = \\(unsigned char \\(\\*\\)\\\[2\\\]\\) $hex"
     gdb_test "p parrays->array5"	" = \"hij\""
-    gdb_test "p &parrays->array5"	" = \\(unsigned char \\(\\*\\)\\\[4\\\]\\) $hex <arrays\\+$decimal>"
+    gdb_test "p &parrays->array5"	" = \\(unsigned char \\(\\*\\)\\\[4\\\]\\) $hex"
 
     gdb_test_no_output "set print address off"
 }
@@ -696,8 +674,6 @@ proc test_print_array_constants {} {
 proc test_print_enums {} {
     # Regression test for PR11827.
     gdb_test "print some_volatile_enum" "enumvolval1"
-
-    gdb_test "print three" " = \\\(ONE \\| TWO\\\)"
 }
 
 proc test_printf {} {
@@ -772,16 +748,6 @@ proc test_printf_with_dfp {} {
     gdb_test "printf \"%DDf\\n\",1.2E6144dl" "1.200000000000000000000000000000000E\\+6144"
 }
 
-proc test_print_symbol {} {
-    gdb_test_no_output "set print symbol on"
-
-    gdb_test "print &three" " = .* <three>"
-    gdb_test "print parrays" " = .* <arrays>"
-
-    # In case somebody adds tests after this.
-    gdb_test_no_output "set print symbol off"
-}
-
 # Escape a left curly brace to prevent it from being interpreted as 
 # the beginning of a bound
 proc gdb_test_escape_braces { args } {
@@ -789,76 +755,6 @@ proc gdb_test_escape_braces { args } {
     set pattern [lindex $args 1]
     regsub -all {\{[0-9]} $pattern {\\&} esc_pattern
     gdb_test [lindex $args 0] $esc_pattern [lindex $args 2]
-}
-
-proc test_repeat_bytes {} {
-    set start(E) {}
-    set start(S) {a}
-    set start(L) {abaabbaaabbb}
-    set start(R) {'a' <repeats 20 times>}
-    set end(E) {}
-    set end(S) {c}
-    set end(L) {cdccddcccddd}
-    set end(R) {'c' <repeats 20 times>}
-    set invalid(S) {\\240}
-    set invalid(L) {\\240\\240\\240\\240}
-    set invalid(R) {'\\240' <repeats 20 times>}
-
-    set fmt(SSS) "\"%s%s%s\""
-    set fmt(SSR) "\"%s%s\", %s"
-    set fmt(SRS) "\"%s\", %s, \"%s\""
-    set fmt(RSS) "%s, \"%s%s\""
-    set fmt(RSR) "%s, \"%s\", %s"
-    set fmt(SRR) "\"%s\", %s, %s"
-    set fmt(RRS) "%s, %s, \"%s\""
-    set fmt(RRR) "%s, %s, %s"
-
-    set fmt(RS) "%s, \"%s\""
-    set fmt(RR) "%s, %s"
-    set fmt(SR) "\"%s\", %s"
-    set fmt(SS) "\"%s%s\""
-
-    # Test the various permutations of invalid characters
-    foreach i [array names invalid] {
-	set I $i
-
-	if {$i == "L"} {
-	    set i "S"
-	}
-
-	foreach s [array names start] {
-	    set S $s
-
-	    if {$s == "L"} {
-		set s "S"
-	    }
-
-
-	    foreach e [array names end] {
-		set E $e
-
-		if {$e == "L"} {
-		    set e "S"
-		}
-
-		# Skip E*E.
-		if {$s == "E" && $e == "E"} { continue }
-
-		# Special cases...
-		if {$s == "E"} {
-		    set result [format $fmt($i$e) $invalid($I) $end($E)]
-		} elseif {$e == "E"} {
-		    set result [format $fmt($s$i) $start($S) $invalid($I)]
-		} else {
-		    set result [format $fmt($s$i$e) \
-				    $start($S) $invalid($I) $end($E)]
-		}
-
-		send_log "expecting: = $result\n"
-		gdb_test "print invalid_$S$I$E" "= $result"
-	    }
-	}
-    }
 }
 
 # Start with a fresh gdb.
@@ -885,39 +781,34 @@ gdb_test_no_output "set print sevenbit-strings"
 gdb_test_no_output "set print address off"
 gdb_test_no_output "set width 0"
 
-if { [test_compiler_info "armcc-*"] } {
-    # ARM RealView compresses large arrays in the data segment.
-    # Before the program starts, we can not read them.  There is
-    # nothing in the file to indicate that data is compressed.
-    setup_xfail "arm*-*-eabi"
-}
-gdb_test "p ctable1\[120\]" "120 'x'" "p ctable1\[120\] #1"
+if [set_lang_c] then {
+    if { [test_compiler_info "armcc-*"] } {
+	# ARM RealView compresses large arrays in the data segment.
+	# Before the program starts, we can not read them.  There is
+	# nothing in the file to indicate that data is compressed.
+	setup_xfail "arm*-*-eabi"
+    }
+    gdb_test "p ctable1\[120\]" "120 'x'" "p ctable1\[120\] #1"
 
-gdb_load ${binfile}
-
-if ![runto_main] then {
-    fail "Can't run to main"
-    return 0
-}
-
-test_integer_literals_accepted
-test_integer_literals_rejected
-test_float_accepted
-test_float_rejected
-test_character_literals_accepted
-test_print_all_chars
-test_print_repeats_10
-test_print_repeats_embedded_array
-test_print_strings
-test_print_int_arrays
-test_print_typedef_arrays
-test_artificial_arrays
-test_print_char_arrays
+    gdb_load ${binfile}
+    if [runto_main] then {
+	test_integer_literals_accepted
+	test_integer_literals_rejected
+	test_character_literals_accepted
+	test_print_all_chars
+	test_print_repeats_10
+	test_print_strings
+	test_print_int_arrays
+	test_print_typedef_arrays
+	test_artificial_arrays
+	test_print_char_arrays
 # We used to do the runto main here.
-test_print_string_constants
-test_print_array_constants
-test_print_enums
-test_printf
-test_printf_with_dfp
-test_print_symbol
-test_repeat_bytes
+	test_print_string_constants
+	test_print_array_constants
+	test_print_enums
+	test_printf
+	test_printf_with_dfp
+    }
+} else {
+    fail "C print command tests suppressed"
+}
